--- a/style.css
+++ b/style.css
@@ -1,15 +1,50 @@
-#content{
-    outline: 2px dashed #ffffff ;
-    outline-offset:-10px;  
-    text-align: center;
-    transition: all .15s ease-in-out;
-    width: 200px;
-    height: 150px;
-    background-color: black;
+  .answer{position: absolute;
+    pointer-events: none;
+    left: 410px;
+    top: 57px;
+    opacity: 0;
+    font-family: 'Dokdo', cursive;
+    font-size: 40px;
+    text-shadow: -1px 0 #fff, 0 1px #fff, 1px 0 #fff, 0 -1px #fff;}
+
+    .goback{position: absolute;
+      pointer-events: none;
+      left: 135px;
+    top: 290px;
+    opacity: 0;
+    z-index: 3;
+    font-family: 'Dokdo', cursive;
+    font-size: 50px;
+    text-shadow: -1px 0 #fff, 0 1px #fff, 1px 0 #fff, 0 -1px #fff;}
+
+.container {
+  display: grid;
+    grid-template-columns: repeat(18, 1fr);
+    grid-template-rows: repeat(19, 1fr);
+    width: 400px;
+    height: 422px;
+    position: absolute;
+    left: 252px;
+    top: 110px;
 }
 
-#content img, #content video{
-    width:100%;
-    height:100%;
-    display:none;
+.red{opacity: 0;
+  background-image: url('./용암.gif');
+  background-repeat: repeat;
+  width: 888px;
+  height: 626px;
+  position: absolute;
+  pointer-events: none;
+}
+
+.box {
+  background-image: url('./캔디.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.hot{
+  cursor: context-menu;
 }
